<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_title"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/dialog_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_info_total_questions"
        android:id="@+id/textView4"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_info_best_score"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_total_questions"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:textSize="16sp"
        android:layout_marginRight="40dp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textView4"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_best_score"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/dialog_total_questions"
        android:layout_alignStart="@+id/dialog_total_questions" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_test_open_graphic"
            android:id="@+id/dialog_show_progress"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_test"
            android:id="@+id/dialog_start_test_button"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>