<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drojj.javatests.info.FeedBack">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_below="@+id/view3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button

                    android:id="@+id/feedback_bad_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bad_vote"
                    android:drawableLeft="@drawable/ic_thumb_down_white_24dp"
                    android:drawablePadding="2dp"
                    android:drawableStart="@drawable/ic_thumb_down_white_24dp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/bad_vote"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/bad_vote_explain"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/feedback_good_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_good_vote"
                    android:drawableLeft="@drawable/ic_thumb_up_white_24dp"
                    android:drawablePadding="2dp"
                    android:drawableStart="@drawable/ic_thumb_up_white_24dp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/good_vote"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/good_vote_explain"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
